tests/baselines/reference/scannerNumericLiteral3.errors.txt
==== tests/cases/conformance/scanner/ecmascript5/scannerNumericLiteral3.ts (2 errors) ====
    01.0
    ~~
!!! error TS1085: Octal literals are not available when targeting ECMAScript 5 and higher.
      ~~
!!! error TS1005: ';' expected.